--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mcp-typebot",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "",
   "main": "index.js",
   "bin": {
@@ -10,20 +10,29 @@
     "build": "tsc",
     "start": "node dist/index.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs",
-  "devDependencies": {
-    "@types/express": "^5.0.3",
-    "@types/node": "^24.0.4",
-    "typescript": "^5.8.3"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/osdeibi/MCP-typebot.git"
   },
+  "keywords": [
+    "typebot",
+    "chatbot",
+    "open source"
+  ],
+  "author": "Osdeibi Acurero",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/osdeibi/MCP-typebot/issues"
+  },
+  "homepage": "https://github.com/osdeibi/MCP-typebot#readme",
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.13.1",
     "axios": "^1.10.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "zod": "^3.25.67"
+  },
+  "devDependencies": {
+    "@types/node": "^24.0.10"
   }
 }
