--- a/package.json
+++ b/package.json
@@ -33,6 +33,9 @@
     "zod": "^3.25.67"
   },
   "devDependencies": {
+    "@types/axios": "^0.9.36",
+    "@types/dotenv": "^6.1.1",
+    "@types/express": "^5.0.3",
     "@types/node": "^24.0.10"
   }
 }
