--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "typebot-mcp",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "",
   "main": "index.js",
   "bin": {
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "https://github.com/hithereiamaliff/typebot-mcp.git"
   },
   "keywords": [
     "typebot",
@@ -22,9 +22,9 @@
   "author": "",
   "license": "MIT",
   "bugs": {
-    "url": ""
+    "url": "https://github.com/hithereiamaliff/typebot-mcp/issues"
   },
-  "homepage": "",
+  "homepage": "https://github.com/hithereiamaliff/typebot-mcp",
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.13.1",
     "axios": "^1.10.0",
