--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "1.0.3",
   "description": "",
   "main": "index.js",
+  "module": "./src/index.ts",
   "bin": {
     "typebot-mcp": "dist/index.js"
   },
   "scripts": {
-    "build": "tsc",
+    "build": "npx @smithery/cli build",
+    "dev": "npx @smithery/cli dev",
     "start": "node dist/index.js"
   },
   "repository": {
@@ -33,6 +35,8 @@
     "zod": "^3.25.67"
   },
   "devDependencies": {
+    "@smithery/cli": "^1.0.0",
+    "tsx": "^4.0.0",
     "@types/axios": "^0.9.36",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.3",
